@@ -157,6 +157,7 @@ $specialPageAliases = array(
 	'Blankpage'                 => array( 'Leerseite' ),
 	'LinkSearch'                => array( 'Weblink-Suche' ),
 	'DeletedContributions'      => array( 'Gelöschte Beiträge' ),
+	'Nuke'                      => array( 'Massenlöschung' ),
 );
 
 $datePreferences = array(
