@@ -439,6 +439,7 @@ $specialPageAliases = array(
 	'Blankpage'                 => array( 'BlankPage' ),
 	'LinkSearch'                => array( 'LinkSearch' ),
 	'DeletedContributions'      => array( 'DeletedContributions' ),
+	'Nuke'                      => array( 'Nuke' ),
 );
 
 /**
@@ -3669,5 +3670,17 @@ Enter the filename without the "{{ns:image}}:" prefix.',
 #Lines beginning with # are treated as comments
 
 #Put all regex fragments above this line. Leave this line exactly as it is</pre>',
+
+# Special:Nuke
+'nuke'               => 'Mass delete',
+'nuke-nopages'       => 'No new pages by [[Special:Contributions/$1|$1]] in recent changes.',
+'nuke-list'          => 'The following pages were recently created by [[Special:Contributions/$1|$1]];
+put in a comment and hit the button to delete them.',
+'nuke-defaultreason' => 'Mass removal of pages added by $1',
+'nuke-tools'         => 'This tool allows for mass deletions of pages recently added by a given user or IP.
+Input the username or IP to get a list of pages to delete.',
+'nuke-submit-user'   => 'Go',
+'nuke-submit-delete' => 'Delete selected',
+'right-nuke'         => 'Mass delete pages',
 
 );
